# mssaprocessingpipeline

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  RemoveNaN.m  build_mex.m  import_data.m  pyproject.toml  test_mex.m  vcpkg.json  zipfiles.cmake
+mssa/: format_cdf.m  mssa_mex.m
MSSAProcessingPipeline/: CMakeLists.txt
MSSAProcessingPipeline/+mssa/: import_data.m
MSSAProcessingPipeline/src/: main.cpp  mexEntry.cpp
MSSAProcessingPipeline/src/MSSA/: MSSA.cpp  MSSA.hpp
MSSAProcessingPipeline/src/SPU/: SPU.hpp
MSSAProcessingPipeline/src/Utilities/: Gradients.hpp  MatrixDefinitions.hpp  ModelInjector.hpp
MSSAProcessingPipeline/tests/: CMakeLists.txt  Test.cpp  TestFlags.cpp  TestInjector.cpp
MSSAPython/: CMakeLists.txt  pyproject.toml
MSSAPython/src/: pyEntry.cpp
MSSAPython/tests/: basic.py
data/: noise1.csv  noise2.csv  signal1.csv  signal2.csv
docs/: DesignDoc.xsd  Designdoc  MSSAMex.txt
examples/: eigenvectorCalculations.mat
lib/: CMakeLists.txt
release/: MSSAMex.7z
releases/: MSSAMex.mexw64  mssa.7z
src/: main.cpp  mexEntry.cpp  pyEntry.cpp
src/CPU/: CPU.hpp
src/MSSA/: CMakeLists.txt  MSSA.cpp  MSSA.h  MSSA.hpp
src/MSSAPython/: __init__.py
src/PreProcessing/: PProcessor.cpp  PProcessor.hpp
src/SPU/: SPU.hpp
src/Utilities/: Gradients.hpp  MatrixDefinitions.hpp
tests/: CMakeLists.txt  Test.cpp  TestCpu.cpp  TestFlags.cpp  TestPreProcessor.cpp  TestProcessor.cpp  TestSpu.cpp
tools/: build_mex.m  defineMSSA.m  defineMSSA.mlx  import_data.m  matlab-generate-c.m  mssa_mex.m  recon.m  run-cmake.bat  usefulVcpkgCommands.txt
